--- a/MeetingPlanner/packages.config
+++ b/MeetingPlanner/packages.config
@@ -8,14 +8,15 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.4" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.4" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6.Migrations" version="1.0.113" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
 </packages>
