--- a/MeetingPlanner/App.config
+++ b/MeetingPlanner/App.config
@@ -1,73 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework"
+				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+				 requirePermission="false" />
 	</configSections>
+
 	<connectionStrings>
-		<add name="MeetingPlannerConnectionString" connectionString="Data Source=MeetingPlannerDatabase.db;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SQLite.EF6" />
+		<add name="MeetingPlannerConnectionString"
+			 connectionString="Data Source=|DataDirectory|\MeetingPlannerDatabase.db;Version=3;"
+			 providerName="System.Data.SQLite" />
 	</connectionStrings>
+
 	<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
-			<parameters>
-				<parameter value="System.Data.SQLite.EF6" />
-			</parameters>
-		</defaultConnectionFactory>
 		<providers>
-			<provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-			<provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-			<!-- Add this line if it is missing -->
+			<provider invariantName="System.Data.SQLite.EF6"
+					 type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+			<provider invariantName="System.Data.SQLite"
+					 type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
 		</providers>
 	</entityFramework>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d4491ee3" culture="neutral" />
-				<!-- Check the installed version and adjust newVersion accordingly -->
-				<bindingRedirect oldVersion="0.0.0.0-1.0.118.0" newVersion="1.0.118.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.0.0.4" newVersion="9.0.0.4" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.2.4.0" newVersion="4.2.4.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.3.0" newVersion="6.0.3.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.0.119.0" newVersion="1.0.119.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Data.SQLite.EF6" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.0.119.0" newVersion="1.0.119.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	<!-- Ensure System.Data.SQLite is registered -->
+
 	<system.data>
 		<DbProviderFactories>
 			<remove invariant="System.Data.SQLite" />
-			<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-			
+			<remove invariant="System.Data.SQLite.EF6" />
+			<add name="SQLite Data Provider"
+				 invariant="System.Data.SQLite"
+				 description=".NET Framework Data Provider for SQLite"
+				 type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+			<add name="SQLite Data Provider (Entity Framework 6)"
+				 invariant="System.Data.SQLite.EF6"
+				 description=".NET Framework Data Provider for SQLite (Entity Framework 6)"
+				 type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
 		</DbProviderFactories>
 	</system.data>
+
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.0.118.0" newVersion="1.0.118.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Data.SQLite.EF6" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.0.118.0" newVersion="1.0.118.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
-
-
