--- a/MeetingPlanner/MeetingPlanner.csproj
+++ b/MeetingPlanner/MeetingPlanner.csproj
@@ -113,10 +113,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\HasEventConverter.cs" />
+    <Compile Include="Services\TimeSpanConverter.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\DateTimeToDateConverter .cs" />
     <Compile Include="Services\DatabaseService.cs" />
     <Compile Include="Services\StringToVisibilityConverter..cs" />
     <Compile Include="ViewModels\CalendarViewModel.cs" />
@@ -198,7 +201,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\key-icon.png" />
   </ItemGroup>
