Сделал обнову в контактах , поменял дизайн, остались теги + события

--- a/MeetingPlanner/MeetingPlanner.csproj
+++ b/MeetingPlanner/MeetingPlanner.csproj
@@ -113,6 +113,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\BoolToVisibilityConverter.cs" />
+    <Compile Include="Services\FriendStatusToVisibilityConverter.cs" />
     <Compile Include="Services\IsPastDateConverter.cs" />
     <Compile Include="Services\HasEventConverter.cs" />
     <Compile Include="Services\TimeSpanConverter.cs" />
